--- a/styles.css
+++ b/styles.css
@@ -6,25 +6,104 @@
 
 body {
   font-family:Georgia, 'Times New Roman', Times, serif;
-  background-color: black;
-  color: white;
+  background: linear-gradient(200deg, #99bee0, #0475cc);
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 50px;
 }
 
 .container {
-  text-align: center;
+  margin: 0 auto;
+  gap: 20px;
+  display: flex;
   justify-content: center;
+  letter-spacing: 1px;
 }
 
 .search {
   padding: 100px;
 }
 
-.info {
-  padding: 100px;
-  border: 10px solid;
-  border-color: white;
+.search-container {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.08);
 }
+
+.search-input {
+  flex: 1;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  background: transparent;
+  border-bottom: 2px solid;
+  padding: 15px 5px;
+}
+
+.search-button {
+  background: transparent;
+  border: 2px dotted;
+  border-radius: 5px;
+  padding: 12px 25px;
+  margin-left: 20px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: border-color 0.3s ease;
+}
+
+.search-button:hover {
+  border: 2px solid;
+  border-color: black;
+}
+
+/* check when visible */
+.error-message {
+  padding: 10px 20px;
+  text-align: center;
+}
+
+.weather-main-card {
+  text-align: center;
+  padding: 50px;
+}
+
+.weather-main-card h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.weather-main-card h1 {
+  font-size: 72px;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.location {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.weather-section {
+  flex: 1;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.weather-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 50px;
+}
+
+.weather-cards {
+  padding: 25px;
+  text-align: center;
+}
+
+.weather-cards span {
+  font-weight: bold;
+}
+
